[tool.poetry]
name = "milvus_library"
version = "1.0.0"
description = "The package will be used for integration with other services and applications"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include=["config.properties"]

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
azure-core = "1.30.1"
azure-storage-blob = "12.20.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
cryptography = "42.0.7"
distlib = "0.3.8"
dulwich = "0.21.7"
environs = "9.5.0"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
grpcio = "1.60.0"
idna = "3.7"
importlib-metadata = "8.0.0"
installer = "0.7.0"
isodate = "0.6.1"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
marshmallow = "3.21.2"
minio = "7.2.7"
more-itertools = "10.3.0"
msgpack = "1.0.8"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.2"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
protobuf = "5.26.1"
ptyprocess = "0.7.0"
pyarrow = "16.0.0"
pycparser = "2.22"
pycryptodome = "3.20.0"
pymilvus = "2.4.1"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
rapidfuzz = "3.9.4"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
scipy = "1.13.0"
shellingham = "1.5.4"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.13.0"
trove-classifiers = "2024.7.2"
typing-extensions = "4.11.0"
tzdata = "2024.1"
ujson = "5.9.0"
urllib3 = "2.2.1"
virtualenv = "20.26.3"
xattr = "1.1.0"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
